@@ -1,3 +1,5 @@
+* #3180: Recreate the index on mount failure of only removable devices. (tomeu)
+
 Snapshot 23f5b3439e
 
 Snapshot dce9c18d56
